@@ -197,7 +197,9 @@ blah blah
 
 <more>
 HTML
-</more>some text
+</more>
+
+some text
 
 <h1 id="TESTING-URLs-hyperlinking">TESTING URLs hyperlinking</h1>
 
