@@ -64,6 +64,13 @@ sub convert_n_test {
 	if (ord("A") == 193) { # EBCDIC.
 	    $expect =~ s/item_mat_3c_21_3e/item_mat_4c_5a_6e/;
 	}
+    if (Pod::Simple->VERSION > 3.28) {
+        $expect =~ s/\n\n(some html)/$1/m;
+        $expect =~ s{(TESTING FOR AND BEGIN</h1>)\n\n}{$1}m;
+        $expect =~ s{(intermediate text</p>)\n\n}{$1}m;
+    } else {
+        $expect =~ s/\n\n(some text)/$1/m;
+    }
 
 	# result
 	open my $in, $outfile or die "cannot open $outfile: $!";
