@@ -2,6 +2,8 @@ Revision history for Perl module Pod::L10N
 
 {{$NEXT}}
 
+	- adjust tests for Pod-Simple-3.29
+
 1.01 2013-10-21T18:15:52Z
 
 	- recover pod
